<resources>
    <string name="app_name">Parques Bs As</string>

    <!-- Edit Text Validator-->
    <string name="invalid_name">Nombre inválido</string>
    <string name="invalid_last_name">Apellido inválido</string>
    <string name="invalid_email">Email inválido</string>
    <string name="invalid_dni">DNI inválido</string>
    <string name="invalid_password">Contraseña inválida</string>
    <string name="invalid_length">Longitud inválida</string>
    <string name="only_alpha">Se deben ingresar sólo caracteres alfabéticos</string>
    <string name="invalid_password_text">La contraseña debe contener mas de 8 caracteres de los cuales tienen que ser 1 mayúscula, 1 minúscula y un caracter especial</string>
    <string name="invalid_comentario">Comentario inválido</string>

    <string name="emailHint">Email</string>
    <string name="PasswordHint">Password</string>
    <string name="IniciarSesion">Iniciar Sesion</string>
    <string name="CrearCuenta">Crear Cuenta</string>
    <string name="RecuperarContraseña">Recuperar Contraseña</string>
    <string name="CambiarContraseña">Cambiar contraseña</string>
    <string name="contraseniaViejaHint">Contraseña antigua</string>
    <string name="contraseniaNuevaHint">Contraseña nueva</string>
    <string name="contraseniaNuevaRepetirHint">Repetir contraseña</string>
    <string name="contrasenias_deben_coincidir">Las contraseñas deben coincidir</string>
    <string name="WorkInProgress">Work in progress</string>
    <string name="DatosVacios">Campos obligatorios sin completar</string>
    <string name="nombreHint">Nombre</string>
    <string name="apellidoHint">Apellido</string>
    <string name="NumberHint">Numero</string>
    <string name="EmailExistente">Email existente</string>
    <string name="DatosIncorrectos">Datos incorrectos</string>


    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_closed">Drawer Closed</string>

    <string name="title_activity_maps">Map</string>
    <string name="map">Mapa</string>

    <string name="configuracion">Configuración</string>
    <string name="settings_inicio_sesion_auto_default">true</string>
    <string name="settings_inicio_sesion_auto">Iniciar sesión automáticamente</string>
    <string name="menu_agregar_parque">Agregar Parque</string>
    <string name="menu_parques">Parques</string>
    <string name="menu_reclamos">Reclamos</string>
    <string name="perfil">Perfil</string>
    <string name="menu_settings">@string/configuracion</string>
    <string name="menu_about_me">Acerca de</string>
    <string name="logout">Cerrar sesión</string>
    <string name="login">Iniciar sesión</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="eliminar_cuenta_texto">Si usted elimina la cuenta, no habrá posibilidades de recuperarla</string>

    <string name="about_me_text">Desarrollado por Nicolás Diaz. Contacto: nicoadiaz93@gmail.com</string>
    <string name="borrar_parque_menu">Borrar</string>
    <string name="modificar_parque_menu">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="pregunta_borrar_parque">Desea borrar este parque?</string>
    <string name="lat_prompt">Latitud</string>
    <string name="lng_prompt">Longitud</string>
    <string name="sin_reclamos_cargados">Sin reclamos cargados</string>
    <string name="menu_agregar_reclamo">Agregar reclamo</string>
    <string name="actividades">Actividades</string>
    <string name="ferias">Ferias</string>
    <string name="descripcion_general">Descripción general</string>
    <string name="eco_bici">Eco Bici</string>
    <string name="seguridad">Seguridad:</string>
    <string name="estacion_saludable">Estación saludable</string>
    <string name="estaciones_saludables">Estaciones saludables</string>
    <string name="sin_actividades_cargadas">Sin actividades cargadas</string>
    <string name="sin_actividades_horarios_cargadas">Actividad sin horarios</string>
    <string name="menu_sacar_foto_reclamo">Sacar Foto</string>
    <string name="agregar_reclamo">Agregar Reclamo</string>
    <string name="lista_reclamos">Lista Reclamos</string>
    <string name="generar">Generar</string>
    <string name="detalles">Detalles</string>
    <string name="image">Imagen</string>
    <string name="reclamos">Reclamos</string>
    <string name="elegir_reclamo">Elegir reclamo</string>
    <string name="nombre_parque">Nombre del parque</string>
    <string name="nombre_reclamo">Nombre del reclamo</string>
    <string name="detalle_reclamo">Detalle Reclamo</string>
    <string name="mas_informacion">Mas información</string>
    <string name="lista_parques">Lista de Parques</string>
    <string name="search">Buscar</string>
    <string name="parque_no_encontrado">Parque no encontrado</string>
    <string name="actividades_horarios">Días y horarios</string>
    <string name="lista_mis_reclamos">Mis reclamos</string>
    <string name="lista_encuestas">Encuestas</string>
    <string name="encuesta">Encuesta</string>
    <string name="calificacion">Calificación</string>
    <string name="estado">Estado</string>
    <string name="share">Compartir</string>
    <string name="error_maps_package_not_found">No se encontró la aplicación de mapas instalada</string>
    <string name="ferias_itinerantes">Ferias Itinerantes</string>
    <string name="puntos_verdes">Puntos Verdes</string>
    <string name="default_permission_rejected">Se debe aceptar el permiso para acceder a la funcionalidad</string>
    <string name="showing_maps_route_confirmation">Se abrirá el Maps para mostrar el recorrido hacia el parque</string>
    <string name="welcome">Bienvenido</string>
    <string name="dialog_title_recover_password">Ingrese su email para recuperar su contraseña</string>
    <string name="filter">Filtrar</string>
    <string name="patio_juegos">Patio de juegos</string>
    <string name="others">Otros</string>
    <string name="filters">Filtros</string>
    <string name="apply">Aplicar</string>
    <string name="clean_filters">Limpiar filtros</string>

    <!-- Dialog Buttons-->
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">CANCELAR</string>
    <string name="dialog_reintent">REINTENTAR</string>
    <string name="dialog_later">LUEGO</string>
    <string name="dialog_no_thanks">NO, GRACIAS</string>
    <string name="dialog_rate">CALIFICAR</string>
    <string name="dialog_exit">SALIR</string>
    <string name="dialog_accept">ACEPTAR</string>
    <string name="dialog_delete">ELIMINAR</string>

    <string name="como_llego">Cómo llego?</string>
    <string name="reclamo_sin_documento">Debe haber agregado su documento para poder generar un reclamo</string>

    <!-- Rate It Dialog -->
    <string name="rate_title">Califica esta aplicación</string>
    <string name="rate_message">Si disfrutas utilizar esta aplicación, te tomarías un momento para calificarla? No te llevará más de un minuto. Gracias por tu apoyo!</string>
    <string name="warning">Atención</string>
    <string name="Omitir">Omitir</string>
    <string name="delete_reclamo">¿Desea eliminar el reclamo de manera permanente?</string>

    <string-array name="lat_entries">
        <item>-34.6060982</item>
        <item>-34.6178287</item>
    </string-array>
    <string-array name="lng_entries">
        <item>-58.4354782</item>
        <item>-58.4333543</item>
    </string-array>
</resources>
