<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/asdasd"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_parques"
            android:icon="@drawable/ic_parques"
            android:title="@string/menu_parques" />

        <item
            android:id="@+id/nav_menu_perfil"
            android:icon="@drawable/ic_perfil"
            android:title="@string/perfil" />

        <item
            android:id="@+id/nav_menu_reclamos"
            android:icon="@drawable/ic_reclamos"
            android:title="@string/menu_reclamos" />
    </group>

    <group
        android:id="@+id/asdaas"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_menu_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings"
            android:visible="false" />
        <item
            android:id="@+id/nav_menu_about_me"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_about_me" />
        <item
            android:id="@+id/nav_menu_login"
            android:icon="@drawable/ic_perfil"
            android:title="@string/login"
            android:visible="false" />
    </group>


</menu>