<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_detalles_parque"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <include
        android:id="@+id/toolbar_parque_detalles"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_detalle_parque"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/parque_ejemplo" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        android:background="#e1e1e1"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="6dp">

            <Button
                android:id="@+id/btn_desc_general_parque_detalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="#FFF"
                android:drawableRight="@drawable/ic_acceder"
                android:gravity="left|center"
                android:padding="20dp"
                android:text="@string/descripcion_general"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_actividad_parque_detalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="#FFF"
                android:drawableRight="@drawable/ic_acceder"
                android:gravity="left|center"
                android:padding="20dp"
                android:text="@string/actividades"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_feria_parque_detalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="#FFF"
                android:drawableRight="@drawable/ic_acceder"
                android:gravity="left|center"
                android:padding="20dp"
                android:text="@string/ferias"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_eco_bici_parque_detalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="#FFF"
                android:drawableRight="@drawable/ic_acceder"
                android:gravity="left|center"
                android:padding="20dp"
                android:text="@string/eco_bici"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_est_saludable_parque_detalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="#FFF"
                android:drawableRight="@drawable/ic_acceder"
                android:gravity="left|center"
                android:padding="20dp"
                android:text="@string/estacion_saludable"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>