<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createAccountContainerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_home_img_original"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/general_padding"
    android:weightSum="100"
    tools:context=".ui.activities.CreateUserActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_weight="70"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/LoginTitle"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="30"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <EditText
                android:id="@+id/etNombreCrearCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#87000000"
                android:drawableLeft="@drawable/ic_usuario"
                android:drawablePadding="6dp"
                android:hint="@string/nombreHint"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:text="poasfk"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/LoginEdittext" />

            <EditText
                android:id="@+id/etApellidoCrearCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#87000000"
                android:drawableLeft="@drawable/ic_usuario"
                android:drawablePadding="6dp"
                android:hint="@string/apellidoHint"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:text="aosgkoga"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/LoginEdittext" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="100">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spiDocType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="50"
                    android:background="@drawable/spinner_doctype_bg"
                    android:gravity="center"
                    android:popupBackground="#263238" />

                <EditText
                    android:id="@+id/etDNICrearCuenta"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="50"
                    android:background="#87000000"
                    android:hint="@string/DNIHint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:text="123456"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/LoginEdittext" />
            </LinearLayout>

            <EditText
                android:id="@+id/etEmailCrearCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#87000000"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="6dp"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="8dp"
                android:text="asd@asd.com"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/LoginEdittext" />

            <EditText
                android:id="@+id/etPasswordCrearCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#87000000"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="6dp"
                android:drawableRight="@drawable/ic_ver_password"
                android:hint="@string/PasswordHint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:text="Asd1234$"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/LoginEdittext" />

            <Button
                android:id="@+id/btnCrear_Cuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:text="@string/CrearCuenta" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>